feat(search): added albums and uploads to search with markers
